Ingreso y listado de mensajes

--- a/ecommerce/README
+++ b/ecommerce/README
@@ -7,4 +7,4 @@ Integrantes:
 Superusuario: administrador
 Pass: admin1234
 
-página de inicio http://127.0.0.1:8000/productos/inicio/
+página de inicio http://127.0.0.1:8000/
